# kbtogglr

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.rst  conftest.py  genindex.html  index.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  whitelist.py
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml
_assets/: modules.html  readme_include.html
_assets/install/: desktop.html  install.html  installer.html  uninstaller.html
_assets/module/: keyboard.html  module.html  toggle.html
_modules/: desktop.html  index.html  installer.html  keyboard.html  toggle.html  uninstaller.html
_sources/_assets/install/: install.rst.txt  installer.rst.txt  uninstaller.rst.txt
assets/: org.kbtogglr.desktop
docs/: conf.py  index.rst  kbtogglr.rst  kbtogglr.src.install.rst  kbtogglr.src.module.rst  requirements.txt
docs/_assets/: install.rst  modules.rst
docs/_assets/install/: desktop.rst
docs/_assets/module/: keyboard.rst  module.rst  toggle.rst
kbtogglr/: __init__.py  __main__.py  _main.py  _version.py
kbtogglr/lib/: template.desktop
kbtogglr/src/: install.py  keyboard.py  paths.py  toggle.py
kbtogglr/src/install/: desktop.py  helpers.py  installer.py  uninstaller.py
kbtogglr/src/module/: toggle.py
tests/: TESTS.md  _test.py  install_test.py
