[build-system]
build-backend = "setuptools.build_meta:__legacy__"
requires = ["setuptools", "wheel"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_lines = ['__name__ == "__main__"']
fail_under = 100

[tool.coverage.run]
omit = ["whitelist.py", "kbtogglr/__main__.py"]

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
