[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "kbtogglr/__main__.py",
  "whitelist.py"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Toggle keyboard on and off"
documentation = "https://kbtogglr.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/kbtogglr/"
keywords = [
  "hardware",
  "keyboard",
  "toggle",
  "usb",
  "xinput"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "kbtogglr"
readme = "README.rst"
repository = "https://github.com/jshwi/kbtogglr"
version = "1.1.1"

[tool.poetry.dependencies]
appdirs = "^1.4.4"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.12.0"
ipython = "^8.12.3"
pre-commit = "^3.5.0"
pyaud = "^7.3.1"
pylint = "3.0.3"
pytest = "^7.4.4"
pytest-randomly = "^3.15.0"
pytest-sugar = "^0.9.6"
restview = "^3.0.0"
sphinx-immaterial = "^0.11.10"
sphinx-toolbox = "^3.5.0"

[tool.poetry.scripts]
kbtogglr = "kbtogglr.__main__:main"

[tool.pyaud]
audit = [
  "about-tests",
  "commit-policy",
  "const",
  "copyright-year",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
  (?x)^(
    | docs\/conf\.py
    | whitelist\.py
  )$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
